--- a/render-db-init.yaml
+++ b/render-db-init.yaml
@@ -7,7 +7,7 @@ services:
     envVars:
       - key: DATABASE_URL
         fromService:
-          name: todo-main-app  # tu wpisz nazwę Twojej głównej aplikacji
+          name: Todo-Flow
           type: web
           property: env.DATABASE_URL
     plan: free
